# gis-on-docker

./: Dockerfile  Makefile  docker-compose.yaml
work/: pyproject.toml
